# polygon-collision-detection

./: CMakeLists.txt  COPYRIGHT.md  README.md
boost2/: CMakeLists.txt
include/: earcut.h  generate.h  gjk.h  plot.h  sat.h  utils.h
src/: benchmark.cpp  boost_closest_point_extension.cpp  line_strip.cpp  main.cpp
